syntax = "proto3";

package onight.zjfae.afront.gensazj;

//Generated By BrewRobot:Wed Sep 06 14:53:46 CST 2017

message PBAPP_andNative_whiteScreen{
	//
	message WhiteScreen{
		string userId=1;//用户登录账号
		string account = 2;//用户账户
		string skip = 3;//跳转标识 andNative   默认原生跳转；tencentSkip  腾讯跳转
		string isOpenChain = 4;//是否开启区块链：1-开启，0-关闭
	}

	repeated WhiteScreen whiteScreen = 1;

}

message Ret_PBAPP_andNative_whiteScreen{
	//

	string returnCode=1;	//报文头

	string returnMsg=2;	//报文头

	PBAPP_andNative_whiteScreen data=3;


}

message REQ_PBAPP_andNative_whiteScreen{
	//
	string account=1;//用户账户
}