syntax = "proto3";

package onight.zjfae.afront.gens.v2;
option java_outer_classname="CountMessage";
//Generated By BrewRobot:Wed Sep 20 10:06:00 CST 2017

message PBIFE_messagemanage_countMessage{
	///ife/messagemanage/countMessage.html

	string unReadMessageCount = 1; //,未读消息总数,String,不校验,是,


}

message Ret_PBIFE_messagemanage_countMessage{
	///ife/messagemanage/countMessage.html

	string returnCode=1;	//报文头

	string returnMsg=2;	//报文头

	PBIFE_messagemanage_countMessage data=3;


}

message REQ_PBIFE_messagemanage_countMessage{
	///ife/messagemanage/countMessage.html

	string startDate = 1; //,开始日期,String,不校验,否,

	string endDate = 2; //,结束日期,String,不校验,否,

	string version = 3; //,版本号,String,不校验,否,
	
	string tcUsersGmtCreate= 4; //,记录产生时间,String,不校验,否,


}